--- a/WarDinos-Unity/WarDinos/Assembly-CSharp.csproj
+++ b/WarDinos-Unity/WarDinos/Assembly-CSharp.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\AgentBehaviour.cs" />
      <Compile Include="Assets\Scripts\Dinossauro.cs" />
+     <Compile Include="Assets\Scripts\HUD\ButtonUnitVelociraptor.cs" />
+     <Compile Include="Assets\Scripts\HUD\HUDController.cs" />
+     <Compile Include="Assets\Scripts\HUD\UnitButton.cs" />
      <Compile Include="Assets\Scripts\Jogador.cs" />
      <Compile Include="Assets\Scripts\Link.cs" />
      <Compile Include="Assets\Scripts\LoggerMongo.cs" />
