colisão nas classes básicas e geração de vetor de inimigos que colidiram

--- a/WarDinos-Unity/WarDinos/Assembly-CSharp.csproj
+++ b/WarDinos-Unity/WarDinos/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Scripts\Dinossauros\Raptor.cs" />
      <Compile Include="Assets\Scripts\Dinossauros\TRex.cs" />
      <Compile Include="Assets\Scripts\Dinossauros\Triceratopo.cs" />
+     <Compile Include="Assets\Scripts\Grupo.cs" />
      <Compile Include="Assets\Scripts\HUD\HUDController.cs" />
      <Compile Include="Assets\Scripts\HUD\HUDTime.cs" />
      <Compile Include="Assets\Scripts\HUD\LaneButton.cs" />
