--- a/WarDinos-Unity/WarDinos/Assembly-CSharp.csproj
+++ b/WarDinos-Unity/WarDinos/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\AgentBehaviour.cs" />
+     <Compile Include="Assets\Scripts\DB\ConexaoMongo.cs" />
      <Compile Include="Assets\Scripts\DB\LoggerMongo.cs" />
      <Compile Include="Assets\Scripts\Dinossauros\Apatossauro.cs" />
      <Compile Include="Assets\Scripts\Dinossauros\Dinossauro.cs" />
@@ -85,6 +86,7 @@
      <Compile Include="Assets\Sky FX Pack\Scripts\RayBehavior.cs" />
      <Compile Include="Assets\Sky FX Pack\Scripts\RotateBehaviour.cs" />
      <Compile Include="Assets\Sky FX Pack\Scripts\ScrollBehaviour.cs" />
+     <None Include="Assets\Scripts\DB\unity-mongo\MongoDB.Bson.xml" />
  <Reference Include="Facebook.Unity.Settings">
  <HintPath>C:/Users/Winny S/Documents/GitHub/WarDinos/WarDinos-Unity/WarDinos/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
  </Reference>
@@ -108,6 +110,12 @@
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
+ </Reference>
+ <Reference Include="MongoDB.Driver">
+ <HintPath>C:/Users/Winny S/Documents/GitHub/WarDinos/WarDinos-Unity/WarDinos/Assets/Scripts/DB/unity-mongo/MongoDB.Driver.dll</HintPath>
+ </Reference>
+ <Reference Include="MongoDB.Bson">
+ <HintPath>C:/Users/Winny S/Documents/GitHub/WarDinos/WarDinos-Unity/WarDinos/Assets/Scripts/DB/unity-mongo/MongoDB.Bson.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
